# MOFBuilder

./: AGENTS.md  ARCHITECTURE.md  CHECKLIST.md  EXECUTOR.md  OPTIMIZER_DISCUSSION_MEMORY.md  OPTIMIZER_TODO_ROADMAP.md  PLAN.md  PLANNER.md  PLANS.md  README.md  REVIEW.md  REVIEWER.md  ROUND1_CHECKPOINT.md  STATUS.md  WORKLOG.md  pyproject.toml
.github/workflows/: pagestatic.yml  static.yml
control/: STATUS.md  WORKLOG.md
docs/: api.md  examples.md  index.md  installation.md  make.bat  quickstart.md  requirements.txt
docs/source/: api_reference.rst  conf.py
docs/source/api_generated/: mofbuilder.MetalOrganicFrameworkBuilder.rst  mofbuilder.core.Framework.rst  mofbuilder.io.CifReader.rst  mofbuilder.io.CifWriter.rst  mofbuilder.io.GroReader.rst  mofbuilder.io.GroWriter.rst  mofbuilder.io.PdbReader.rst  mofbuilder.io.PdbWriter.rst  mofbuilder.io.XyzReader.rst  mofbuilder.io.XyzWriter.rst  mofbuilder.md.ForceFieldMapper.rst  mofbuilder.md.GromacsForcefieldMerger.rst  mofbuilder.md.LinkerForceFieldGenerator.rst  mofbuilder.md.OpenmmSetup.rst  mofbuilder.md.SolvationBuilder.rst  mofbuilder.visualization.Viewer.rst
examples/: fig2_defective.ipynb
scripts/: run_tests.sh
src/mofbuilder/core/: builder.py  defects.py  framework.py  linker.py  moftoplibrary.py  net.py  node.py  optimizer.py  optimizer_contract.py  runtime_snapshot.py  supercell.py  write.py
src/mofbuilder/io/: cif_reader.py  pdb_reader.py
src/mofbuilder/md/: gmxfilemerge.py
tests/: conftest.py  test_core_builder.py  test_core_defects.py  test_core_framework.py  test_core_linker.py  test_core_moftoplibrary.py  test_core_net.py  test_core_node.py  test_core_optimizer.py  test_core_runtime_snapshot.py  test_core_write.py  test_io_reader.py  test_md_gmxfilemerge.py  test_workflow_run.py
workflow/: REVIEW.md  STATUS.md  WORKLOG.md  run.py
